# cargo-check-external-types

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: cargo.rs  config.rs  error.rs  lib.rs  main.rs  path.rs  visitor.rs
test-workspace/: Cargo.toml
test-workspace/external-lib/src/: lib.rs
test-workspace/test-crate-custom-lib-name/: Cargo.toml
test-workspace/test-crate-custom-lib-name/src/: lib.rs
test-workspace/test-crate-metadata-config/: Cargo.toml
test-workspace/test-crate-metadata-config/src/: lib.rs
test-workspace/test-crate/src/: lib.rs  test_assoc_type.rs  test_fields_stripped.rs  test_structs.rs  test_union.rs
test-workspace/test-reexports-crate/src/: lib.rs
test-workspace/test-type-exported-from-hidden-module/: Cargo.toml
test-workspace/test-type-exported-from-hidden-module/src/: lib.rs
tests/: allow-some-types-expected-output.md  allow-some-types-metadata-expected-output.md  allow-types-multiple-times.md  allow-types-multiple-times.toml  allow-types-unused.md  allow-types-unused.toml  default-config-custom-lib-name-expected-output.md  default-config-expected-output.md  default-config-expected-output.txt  integration_test.rs  output-format-markdown-table-expected-output.md  test-reexports-expected-output.md  test-type-exported-from-hidden-module.md
