[package]
name = "cargo-check-external-types"
version = "0.1.10"
authors = ["AWS Rust SDK Team <aws-sdk-rust@amazon.com>", "John DiSanti <jdisanti@amazon.com>"]
description = "Static analysis tool to detect external types exposed in a library's public API."
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/cargo-check-external-types"

[dependencies]
anyhow = "1"
cargo_metadata = "0.15"
clap = { version = "~3.2.25", features = ["derive"] }
owo-colors = { version = "3", features = ["supports-colors"] }
pest = "2" # For pretty error formatting
rustdoc-types = "0.23.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.7"
tracing = "0.1"
tracing-attributes = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
wildmatch = "2"

[dev-dependencies]
pretty_assertions = "1.4"
test_bin = "0.4"
