[package]
name = "cargo-check-external-types"
version = "0.1.14"
authors = ["AWS Rust SDK Team <aws-sdk-rust@amazon.com>", "John DiSanti <jdisanti@amazon.com>"]
description = "Static analysis tool to detect external types exposed in a library's public API."
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/cargo-check-external-types"

[dependencies]
anyhow = "1"
cargo_metadata = "0.19"
clap = { version = "4.4.18", features = ["derive"] }
owo-colors = { version = "4", features = ["supports-colors"] }
pest = "2" # For pretty error formatting
rustdoc-types = "0.32.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
wildmatch = "2"

[dev-dependencies]
pretty_assertions = "1.4"
test_bin = "0.4"
